rename bibtex item

--- a/homepage/minigrid-impact.bib
+++ b/homepage/minigrid-impact.bib
@@ -1,4 +1,4 @@
-@article{10.1088/2634-4505/ad4ffb,
+@article{MiniGrid-Impact,
 	author={Carabajal, Amy and Orsot, Akoua and Elimbi Moudio, Marie Pelagie and Haggai, Tracy and Okonkwo, Chioma Joy and Jarrard, George Truett and Selby, Nicholas Stearns},
 	title={Social and economic impact analysis of solar mini-grids in rural Africa: a cohort study from Kenya and Nigeria},
 	journal={Environmental Research: Infrastructure and Sustainability},
