--- a/homepage/minigrid-impact.bib
+++ b/homepage/minigrid-impact.bib
@@ -1,8 +1,14 @@
-@article{MiniGrid-Impact,
-	author={Carabajal, Amy and Orsot, Akoua and Elimbi Moudio, Marie Pelagie and Haggai, Tracy and Okonkwo, Chioma Joy and Jarrard, George Truett and Selby, Nicholas Stearns},
-	title={Social and economic impact analysis of solar mini-grids in rural Africa: a cohort study from Kenya and Nigeria},
-	journal={Environmental Research: Infrastructure and Sustainability},
-	url={http://iopscience.iop.org/article/10.1088/2634-4505/ad4ffb},
-	year={2024},
-	abstract={This study presents the first comprehensive analysis of the social and economic effects of solar mini-grids in rural African settings, specifically in Kenya and Nigeria. A group of 2,658 household heads and business owners connected to mini-grids over the last five years were interviewed both before and one year after their connection. These interviews focused on changes in gender equality, productivity, health, safety, and economic activity. The results show notable improvements in all areas. Economic activities and productivity increased significantly among the connected households and businesses. The median income of rural Kenyan community members quadrupled. Gender equality also improved, with women gaining more opportunities in decision making and business. Health and safety enhancements were linked to reduced use of hazardous energy sources like kerosene lamps. The introduction of solar mini-grids not only transformed the energy landscape but also led to broad socioeconomic benefits in these rural areas. The research highlights the substantial impact of decentralized renewable energy on the social and economic development of rural African communities. Its findings are crucial for policymakers, development agencies, and stakeholders focused on promoting sustainable energy and development in Africa.}
+@article{minigrid-impact,
+	doi = {10.1088/2634-4505/ad4ffb},
+	url = {https://dx.doi.org/10.1088/2634-4505/ad4ffb},
+	year = {2024},
+	month = {jun},
+	publisher = {IOP Publishing},
+	volume = {4},
+	number = {2},
+	pages = {025005},
+	author = {A T Carabajal and A Orsot and M P E Moudio and T Haggai and C J Okonkwo and G T Jarrard III and N S Selby},
+	title = {Social and Economic Impact Analysis of Solar Mini-Grids in Rural Africa: A Cohort Study from Kenya and Nigeria},
+	journal = {Environmental Research: Infrastructure and Sustainability},
+	abstract = {This study presents the first comprehensive analysis of the social and economic effects of solar mini-grids in rural African settings, specifically in Kenya and Nigeria. A group of 2658 household heads and business owners connected to mini-grids over the last five years were interviewed both before and one year after their connection. These interviews focused on changes in gender equality, productivity, health, safety, and economic activity. The results show notable improvements in all areas. Economic activities and productivity increased significantly among the connected households and businesses. The median income of rural Kenyan community members quadrupled. Gender equality also improved, with women gaining more opportunities in decision making and business. Health and safety enhancements were linked to reduced use of hazardous energy sources like kerosene lamps. The introduction of solar mini-grids not only transformed the energy landscape but also led to broad socioeconomic benefits in these rural areas. The research highlights the substantial impact of decentralized renewable energy on the social and economic development of rural African communities. Its findings are crucial for policymakers, development agencies, and stakeholders focused on promoting sustainable energy and development in Africa.}
 }
